finalized account validation
